--- a/index.html
+++ b/index.html
@@ -228,13 +228,12 @@
 
 <div class="contact-form">
     <h2>Contáctame</h2>
-    <form action="https://formsubmit.co/productossoftware2@gmail.com" method="POST">
+    <form id="contactForm" action="https://formsubmit.co/productossoftware2@gmail.com" method="POST">
         <input type="text" name="name" placeholder="Tu nombre" required>
         <input type="email" name="email" placeholder="Tu correo electrónico" required>
         <textarea name="message" placeholder="Tu mensaje" rows="4" required></textarea>
         <button type="submit">Enviar</button>
         <input type="hidden" name="_redirect" value="https://richard200001.github.io/ProductosSoftware/#contact">
-
     </form>
 </div>
 
@@ -244,6 +243,7 @@
         <p>¡Mensaje enviado satisfactoriamente!</p>
     </div>
 </div>
+
 
     <footer id="contact">
         <h2>Conéctate conmigo</h2>
