--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
 
 <div class="contact-form">
     <h2>Contáctame</h2>
-    <form id="contactForm" action="https://formsubmit.co/productossoftware2@gmail.com" method="POST">
+    <form action="https://formsubmit.co/productossoftware2@gmail.com" method="POST">
         <input type="text" name="name" placeholder="Tu nombre" required>
         <input type="email" name="email" placeholder="Tu correo electrónico" required>
         <textarea name="message" placeholder="Tu mensaje" rows="4" required></textarea>
@@ -236,6 +236,7 @@
         <input type="hidden" name="_redirect" value="https://richard200001.github.io/ProductosSoftware/#contact">
     </form>
 </div>
+
 
 
 
