--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
         <input type="email" name="email" placeholder="Tu correo electrónico" required>
         <textarea name="message" placeholder="Tu mensaje" rows="4" required></textarea>
         <button type="submit">Enviar</button>
-        <input type="hidden" name="_redirect" value="https://richard200001.github.io/ProductosSoftware/#contact">
+        <input type="hidden" name="_next" value="https://richard200001.github.io/ProductosSoftware/#contact">
     </form>
 </div>
 
