decimo cuarto commit

--- a/index.html
+++ b/index.html
@@ -233,8 +233,16 @@
         <input type="email" name="email" placeholder="Tu correo electrónico" required>
         <textarea name="message" placeholder="Tu mensaje" rows="4" required></textarea>
         <button type="submit">Enviar</button>
-        <input type="hidden" name="_next" value="https://richard200001.github.io/ProductosSoftware/index.html">
+        <input type="hidden" name="_next" value="https://richard200001.github.io/ProductosSoftware/index.html?message=sent">
+
     </form>
+</div>
+
+<!-- Modal de éxito -->
+<div id="successModal" class="modal" style="display: none;">
+    <div class="modal-content">
+        <p>¡Mensaje enviado satisfactoriamente!</p>
+    </div>
 </div>
 
 
