decimo sexto commit

--- a/index.html
+++ b/index.html
@@ -250,6 +250,14 @@
 
     <footer id="contact">
         <h2>Conéctate conmigo</h2>
+        <div class="logo-redes">
+              <ul class="list">
+                <li class="shake"><a href="https://www.facebook.com/people/DevMaster/100094594508947/" target="_blank"><img src="img/facebook.png"  alt="" style="height: 50px; width: 50px;"></a></li>
+                <li class="pulse"><a href="https://instagram.com/devmasterplus?igshid=MzRlODBiNWFlZA==" target="_blank"><img src="img/instagram.png" alt="" style="height: 50px; width: 50px; "></a></li>
+                <li class="bounce"><a href="https://www.tiktok.com/@productsdevmasterplus?lang=es" target="_blank"><img src="images/tik-tok.png" alt="" style="height: 50px; width: 50px;"></a></li>
+                <li class="bounce"><a href="https://www.youtube.com/@DevMasterProductosSoftware" target="_blank"><img src="images/youtube.png" alt="" style="height: 50px; width: 50px;"></a></li>
+          </div>
+        
         <p>&copy; 2025 La Empresa de Software que necesitas para impulsar tu negocio.</p>
         <p>Teléfono: +57 320 362 0698</p>
     </footer>
